--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -418,7 +418,7 @@ Keen.ready(function(){
     timeframe: timeframe
   });
 
-  var charty = new Keen.Dataviz()
+  var chart = new Keen.Dataviz()
     .el(document.getElementById("visitors-uniques"))
     .chartType("linechart")
     .chartOptions({
