--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -402,8 +402,8 @@ client.draw(leader, document.getElementById("leader"), {
 
 Keen.ready(function(){
   // use a variable to ensure timeframe & interval for both queries match
-  var interval = "daily"
-  var timeframe = "last_30_days"
+  var interval = "hourly"
+  var timeframe = "last_1_days"
 
   var pageviews = new Keen.Query("count", { // first query
     event_collection: "kWhr",
