--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -411,7 +411,12 @@ Keen.ready(function(){
     timeframe: timeframe
   });
 
-  var uniqueVisitors = -2;
+  var uniqueVisitors = new Keen.Query("count_unique", { // second query
+    event_collection: "temp",
+    target_property: "temperature",
+    interval: interval,
+    timeframe: timeframe
+  });
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("visitors-uniques"))
