--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -420,7 +420,7 @@ Keen.ready(function(){
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("visitors-uniques"))
-    .chartType("linechart")
+    .chartType("columnchart")
     .chartOptions({
         chartOptions: {
             isStacked: true
