--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -421,6 +421,7 @@ Keen.ready(function(){
   var chart = new Keen.Dataviz()
     .el(document.getElementById("visitors-uniques"))
     .chartType("columnchart")
+    .width("auto")
     .chartOptions({
         chartOptions: {
             isStacked: true
