--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -422,6 +422,7 @@ Keen.ready(function(){
     .el(document.getElementById("visitors-uniques"))
     .chartType("linechart")
     .width("auto")
+    .curvetype("function")
     .chartOptions({
         chartOptions: {
             isStacked: true
