--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -420,9 +420,8 @@ Keen.ready(function(){
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("visitors-uniques"))
-    .chartType("linechart")
+    .chartType("columnchart")
     .width("auto")
-    .curvetype("function")
     .chartOptions({
         chartOptions: {
             isStacked: true
