--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -443,7 +443,7 @@ Keen.ready(function(){
         data[i]={ // format the data so it can be charted
             timeframe: result1[i]["timeframe"],
             value: [
-                { category: "kWhr", result: result1[i]["value"+"10"] },
+                { category: "kWhr", result: result1[i]["value+10"] },
                 { category: "Outside temp", result: result2[i]["value"] }
             ]
         }
