--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -456,7 +456,7 @@ Keen.ready(function(){
     }
   });
 });
-   window.alert(result1 + 6);
+   window.alert(result1["value"] + 6);
   
 </script>
 
