--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -449,7 +449,7 @@ Keen.ready(function(){
         }
         if (i == result1.length-1) { // chart the data
         chart
-          .window.alert(result1 + result2);
+          window.alert(result1 + result2);
           .parseRawData({ result: data })
           .render();
         }
