--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -412,7 +412,7 @@ Keen.ready(function(){
     timezone: "America/Sao_Paulo"
   });
 
-   window.alert(pageviews);
+   window.alert("state");
   
   var uniqueVisitors = new Keen.Query("maximum", { // second query
     event_collection: "temp",
