--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -411,8 +411,6 @@ Keen.ready(function(){
     timeframe: timeframe,
     timezone: "America/Sao_Paulo"
   });
-
-   window.alert("state");
   
   var uniqueVisitors = new Keen.Query("maximum", { // second query
     event_collection: "temp",
@@ -439,6 +437,7 @@ Keen.ready(function(){
     var result2 = res[1].result  // data from second query
     var data = []  // place for combined results
     var i=0
+    window.alert(result1);
     
     while (i < result1.length) {
 
