--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -427,8 +427,8 @@ Keen.ready(function(){
     .width("auto")
     .chartOptions({
                   vAxis:{ 
-              minValue: -5,
-              maxValue: 5
+              minValue: "auto",
+              maxValue: "auto"
                },
         chartOptions: {
             isStacked: true,
