--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -485,7 +485,7 @@ Keen.ready(function(){
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("EFF"))
-    .chartType("columnchart")
+    .chartType("linechart")
     .width("auto")
     .chartOptions({
                   vAxis:{ 
