--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -423,7 +423,7 @@ Keen.ready(function(){
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("visitors-uniques"))
-    .chartType("columnchart")
+    .chartType("areachart")
     .width("auto")
     .chartOptions({
                   vAxis:{ 
