--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -601,7 +601,7 @@ Keen.ready(function(){
         
 value: [
                 { category: "sofarthismonth", result: result1[i]["value"] },
-                { category: sofarlastmonth", result: result2[i]["value"] }
+                { category: "sofarlastmonth", result: result2[i]["value"] }
             ]
         }
         if (i == result1.length-1) { // chart the data
