--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -594,7 +594,7 @@ Keen.ready(function(){
     while (i < result1.length) {
 
         data[i]={ // format the data so it can be charted
-            timeframe: result1[i]["this_1_months"],
+            timeframe: result1[i]["previous_1_months"],
         
 value: [
                 { category: "sofarthismonth", result: result1[i]["value"] },
