--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -563,7 +563,7 @@ Keen.ready(function(){
     event_collection: "kWhr",
     interval: interval,
     timeframe: timeframe,
-    timezone: "America/Sao_Paulo""
+    timezone: "America/Sao_Paulo"
   });
     
   var sofarlastmonth = new Keen.Query("count", { // second query
