--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -598,7 +598,7 @@ Keen.ready(function(){
     while (i < result1.length) {
 
         data[i]={ // format the data so it can be charted
-            timeframe: result1[i]["timeframe"],
+            timeframe: result1[i]["this_1_days"],
         
 value: [
                 { category: "sofarthismonth", result: result1[i]["value"] },
