--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -556,8 +556,10 @@ Keen.ready(function(){
   Keen.ready(function(){
     
     // use a variable to ensure timeframe & interval for both queries match
-  var interval = "hourly"
-  var timeframe = "this_1_days"
+  var interval = "daily"
+  var timeframe = "this_1_months"
+  
+  var timeframe2 = "this_1_months"
   
     var sofarthismonth = new Keen.Query("count", { // first query
     event_collection: "kWhr",
@@ -569,7 +571,7 @@ Keen.ready(function(){
   var sofarlastmonth = new Keen.Query("count", { // second query
     event_collection: "kWhr",
     interval: interval,
-    timeframe: timeframe,
+    timeframe: timeframe2,
     timezone: "America/Sao_Paulo"
   });
 
@@ -598,7 +600,7 @@ Keen.ready(function(){
     while (i < result1.length) {
 
         data[i]={ // format the data so it can be charted
-            timeframe: result1[i]["this_1_days"],
+            timeframe: result1[i]["timeframe"],
         
 value: [
                 { category: "sofarthismonth", result: result1[i]["value"] },
