--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -571,7 +571,7 @@ Keen.ready(function(){
   var sofarlastmonth = new Keen.Query("count", { // second query
     event_collection: "kWhr",
     interval: interval,
-    timeframe: timeframe2,
+    timeframe: timeframe,
     timezone: "America/Sao_Paulo"
   });
 
