--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -603,8 +603,8 @@ Keen.ready(function(){
             timeframe: result1[i]["timeframe"],
         
 value: [
-                { category: "sofarthismonth", result: result1[i]["value"] },
-                { category: "sofarlastmonth", result: result2[i]["value"] }
+                { category: "sofarthismonth", result: result1[i]["value"] }
+          //      { category: "sofarlastmonth", result: result2[i]["value"] }
             ]
         }
         if (i == result1.length-1) { // chart the data
