--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -577,8 +577,8 @@ Keen.ready(function(){
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("KPI"))
-    .chartType("metric")
-  //  .width("auto")
+    .chartType("linechart")
+    .width("auto")
     .chartOptions({
   //                vAxis:{ 
     //          minValue: "auto",
