--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -577,7 +577,7 @@ Keen.ready(function(){
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("KPI"))
-    .chartType("linechart")
+    .chartType("metric")
     .width("auto")
     .chartOptions({
   //                vAxis:{ 
