--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -563,27 +563,27 @@ Keen.ready(function(){
   
     var sofarthismonth = new Keen.Query("count", { // first query
     event_collection: "kWhr",
-    //interval: interval,
+    interval: interval,
     timeframe: timeframe,
     timezone: "America/Sao_Paulo"
   });
     
   var sofarlastmonth = new Keen.Query("count", { // second query
     event_collection: "kWhr",
-   // interval: interval,
+    interval: interval,
     timeframe: timeframe,
     timezone: "America/Sao_Paulo"
   });
 
   var chart = new Keen.Dataviz()
     .el(document.getElementById("KPI"))
-    .chartType("metric")
+    .chartType("linechart")
     .width("auto")
     .chartOptions({
-  //                vAxis:{ 
-    //          minValue: "auto",
-      //        maxValue: "auto"
-        //       },
+                  vAxis:{ 
+              minValue: "auto",
+              maxValue: "auto"
+               },
         chartOptions: {
             isStacked: true,
           }
