--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -578,8 +578,8 @@ Keen.ready(function(){
   var chart = new Keen.Dataviz()
     .el(document.getElementById("KPI"))
     .chartType("linechart")
- //   .width("auto")
-    .height:("250")
+    .width("auto")
+ //   .height:("250")
     .chartOptions({
                   vAxis:{ 
               minValue: "auto",
