--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -571,7 +571,7 @@ Keen.ready(function(){
     var chart = new Keen.Dataviz()
         .library("c3")
         .chartType("line")
-        .el(document.getElementById("chart"))
+        .el(document.getElementById("KPI"))
         .height(300)
         .colors(['#FFC7CB', '#ABD2D9', '#222222'])
         .chartOptions({
