--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -145,7 +145,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="EFF">
+            <div id="">
             </div>
           </div>
           <div class="chart-notes">
