--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -177,6 +177,7 @@
   <script type="text/javascript" src="../../assets/js/meta.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.10/c3.min.js"></script>
+   <script type="text/javascript" src="https://d26b395fwzu5fz.cloudfront.net/3.4.0/keen.min.js?date=2016-02-17"></script>
     
 <script>
 var client = new Keen({
