--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -630,7 +630,7 @@ Keen.ready(function(){
             value: [
             	{ category: 'this month', result: result1[i].value },
               { category: 'last month', result: result2[i].value },
-          //    { category: 'difference', result: (1 - (result2[i].value / result1[i].value)) * 100 }
+              { category: 'difference', result: (1 - (result2[i].value / result1[i].value)) * 100 }
             ]
           }
           
