--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -289,7 +289,7 @@ Keen.ready(function(){
     "event"
 ],
     interval: "hourly",
-    timeframe: "this_1_days",
+    timeframe: "this_7_days",
     timezone: "America/Sao_Paulo"
   });
   
@@ -416,7 +416,7 @@ client.draw(leader, document.getElementById("leader"), {
   
   
   client.draw(state, document.getElementById("state"), {
-        chartType: "columnchart",
+        chartType: "areachart",
        title: "kWhr", 
         height: "250",
         width: "auto",
