--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -151,7 +151,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="">
+            <div id="percentage">
             </div>
           </div>
           <div class="chart-notes">
@@ -331,6 +331,19 @@ Keen.ready(function(){
   });
     
   
+  var perc = new Keen.Query("count", {
+    eventCollection: "kWhr",
+    filters: [
+    {
+        "operator": "eq",
+        "property_name": "coreid",
+        "property_value": "48ff6e065067555013541287"
+    }
+],
+    timeframe: "this_1_days",
+    timezone: "America/Sao_Paulo"
+  });
+  
        // and draw a column chart
      client.draw(today, document.getElementById("mychart"), {
         chartType: "metric",
@@ -440,6 +453,20 @@ client.draw(leader, document.getElementById("leader"), {
         }
       });
 });
+  
+    client.draw(perc, document.getElementById("percentage"), {
+        chartType: "metric",
+       title: "Percentage", 
+        height: "250",
+        width: "auto",
+          chartOptions: {
+            chartOptions: {
+            isStacked: true
+          }
+        }
+      });
+});
+  
 
 Keen.ready(function(){
   // use a variable to ensure timeframe & interval for both queries match
