--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -327,7 +327,7 @@ Keen.ready(function(){
   });
     
   
-  var perc = "200";
+  var perc = 200;
      /* new Keen.Query("count", {
     eventCollection: "kWhr",
     filters: [
