--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -328,7 +328,7 @@ Keen.ready(function(){
     
     var perc = new Keen.Dataviz()
   .el(document.getElementById('perc'))
-  .parseRawData({ result: 1896 })
+  .parseRawData({ result: "result1" })
   .chartType("metric")
   .colors(["#6ab975"])
   .title("Wow!")
