--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -607,7 +607,7 @@ Keen.ready(function(){
     
       var perc = new Keen.Dataviz()
   .el(document.getElementById('perc'))
-  .parseRawData({ result: result1[i].value})
+  .parseRawData({ result: 1111})
   .chartType("metric")
   .colors(["#6ab975"])
   .title("Wow!")
