--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -631,7 +631,7 @@ Keen.ready(function(){
     */
     var chart = new Keen.Dataviz()
   .el(document.getElementById('perc'))
-  .parseRawData({ result: 1546})
+  //.parseRawData({ result: 1245})
   .chartType("metric")
   .colors(["#6ab975"])
   .title("Wow!")
