--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -660,7 +660,7 @@ Keen.ready(function(){
           i++;
         }
         chart
-        	.parseRawData({ result: data })
+        	.parseRawData({ result: result1[i].value })
           .render();
     });
 });
