--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -660,7 +660,7 @@ Keen.ready(function(){
           i++;
         }
         chart
-        	.parseRawData({ result: 2})
+        	.parseRawData({ result: result1})
           .render();
     });
 });
